--- a/app/css/mystyle.css
+++ b/app/css/mystyle.css
@@ -1,9 +1,31 @@
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+/*body {*/
+    /*display: flex;*/
+    /*min-height: 100vh;*/
+    /*flex-direction: column;*/
+    /*margin-bottom:50px;*/
+
+/*}*/
+
+/*main {*/
+    /*flex: 1 0 auto;*/
+/*}*/
+
+
+
+footer{
+    position:fixed;
+    bottom:0px;
+    left:0px;
+    right:0px;
+    margin-bottom:0px;
 }
 
-main {
-    flex: 1 0 auto;
+
+.user-from{
+    width: 100%;
+    margin: 15% auto 0 auto;
+}
+
+footer.page-footer, nav{
+    background-color: #329284 !important;
 }
