--- a/app/views/header.html
+++ b/app/views/header.html
@@ -3,9 +3,9 @@
         <div class="nav-wrapper">
             <a href="#" class="brand-logo"></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#">Sass</a></li>
-                <li><a href="#">Components</a></li>
-                <li><a href="#">JavaScript</a></li>
+                <li><a href="#/">Home</a></li>
+                <li><a href="#/login">Login</a></li>
+                <li><a href="#/signup">Signup</a></li>
             </ul>
         </div>
     </nav>
