--- a/app/views/signUpForm.html
+++ b/app/views/signUpForm.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row user-from" id="signup-form">
     <form class="col s12">
         <div class="row">
             <div class="input-field col s6">
@@ -29,7 +29,7 @@
 
         <div class="row">
 
-            <button class="btn waves-effect waves-ligh offset-s10" type="submit" name="action">Submit
+            <button class="btn waves-effect waves-ligh offset-s10" type="submit" name="action">Signup
                 <i class="mdi-content-send right"></i>
             </button>
         </div>
