--- a/public/app/css/mystyle.css
+++ b/public/app/css/mystyle.css
@@ -12,6 +12,7 @@
 
 
 
+/*
 footer{
     position:fixed;
     bottom:0px;
@@ -19,6 +20,7 @@ footer{
     right:0px;
     margin-bottom:0px;
 }
+*/
 
 
 .user-from{
