--- a/public/app/views/header.html
+++ b/public/app/views/header.html
@@ -4,6 +4,7 @@
             <a href="#" class="brand-logo"></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="#/">Home</a></li>
+                <li><a href="#/entreprise/ajouter">Home1</a></li>
                 <li><a href="#/login">Login</a></li>
                 <li><a href="#/signup">Signup</a></li>
             </ul>
