--- a/public/app/views/forms/entrepriseForm3.html
+++ b/public/app/views/forms/entrepriseForm3.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="row">
         <div class="input-field col s4">
-            <input id="regime" type="text" class="validate">
+            <input id="regime" type="text" class="validate" ng-model="entreprise.regime">
             <label for="regime">Régime</label>
         </div>
         <div class="input-field col s4">
-            <input id="pays" type="text" class="validate">
+            <input id="pays" type="text" class="validate" ng-model="entreprise.pays">
             <label for="pays">Pays du Participant Etranger </label>
         </div>
         <div class="input-field col s4">
@@ -16,11 +16,11 @@
 
     <div class="row">
         <div class="input-field col s6">
-            <input id="capital" type="text" class="validate">
+            <input id="capital" type="text" class="validate" ng-model="entreprise.capital">
             <label for="capital">Capital en DT</label>
         </div>
         <div class="input-field col s6">
-            <input id="emploi" type="text" class="validate">
+            <input id="emploi" type="text" class="validate" ng-model="entreprise.emploi">
             <label for="emploi">Emploi</label>
         </div>
     </div>
