--- a/public/app/views/forms/entrepriseForm4.html
+++ b/public/app/views/forms/entrepriseForm4.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="row">
         <div class="input-field col s6">
-            <input id="latitude" type="text" class="validate">
+            <input id="latitude" type="text" class="validate" ng-model="entreprise.latitude">
             <label for="latitude">Latitude</label>
         </div>
         <div class="input-field col s6">
-            <input id="longitude" type="text" class="validate">
+            <input id="longitude" type="text" class="validate" ng-model="entreprise.longitude">
             <label for="longitude">Longitude</label>
         </div>
     </div>
