--- a/public/app/views/forms/ajouterentreprise.html
+++ b/public/app/views/forms/ajouterentreprise.html
@@ -35,9 +35,28 @@
 
 <div class="row">
     <div class="col s5 offset-s5">
-        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+        <button class="btn waves-effect waves-light" type="submit" name="action" ng-click="createNewEntreprise(entreprise)">Submit
             <i class="mdi-content-send right"></i>
         </button>
     </div>
 
+</div>
+
+<!-- Modal Structure -->
+<div id="successModal" class="modal">
+    <div class="modal-content">
+        <p>Une nouvelle entreprise s'est ajoutée avec success</p>
+    </div>
+    <div class="modal-footer">
+        <a class=" modal-action modal-close waves-effect waves-green btn-flat">OK</a>
+    </div>
+</div>
+
+<div id="errorModal" class="modal">
+    <div class="modal-content">
+        <p>Une erreur s'est produite lors de l'ajout d'une entreprise</p>
+    </div>
+    <div class="modal-footer">
+        <a class=" modal-action modal-close waves-effect waves-green btn-flat">OK</a>
+    </div>
 </div>
