--- a/public/app/views/forms/entrepriseForm1.html
+++ b/public/app/views/forms/entrepriseForm1.html
@@ -2,25 +2,25 @@
     <div class="row">
         <div class="input-field col s4">
             <input id="denomination" type="text" class="validate" ng-model="entreprise.denomination">
-            <label for="denomination">Dénomination</label>
+            <label for="denomination" class="ng-class:isSelected">Dénomination</label>
         </div>
         <div class="input-field col s4">
-            <input id="raisonsociale" type="text" class="validate">
+            <input id="raisonsociale" type="text" class="validate" ng-model="entreprise.raisonsociale">
             <label for="raisonsociale">Raison Sociale</label>
         </div>
         <div class="input-field col s4">
-            <input id="responsable" type="text" class="validate">
+            <input id="responsable" type="text" class="validate" ng-model="entreprise.responsable">
             <label for="responsable">Responsable</label>
         </div>
     </div>
 
     <div class="row">
         <div class="input-field col s6">
-            <textarea id="activite" class="materialize-textarea"></textarea>
+            <textarea id="activite" class="materialize-textarea" ng-model="entreprise.activite"></textarea>
             <label for="activite">Activités</label>
         </div>
         <div class="input-field col s6">
-            <textarea id="produit" class="materialize-textarea"></textarea>
+            <textarea id="produit" class="materialize-textarea" ng-model="entreprise.produit"></textarea>
             <label for="produit">Produits</label>
         </div>
     </div>
