--- a/public/app/views/forms/entrepriseForm2.html
+++ b/public/app/views/forms/entrepriseForm2.html
@@ -1,37 +1,37 @@
 <div class="container">
     <div class="row">
         <div class="input-field col s4">
-            <input id="adresseusine" type="text" class="validate">
+            <input id="adresseusine" type="text" class="validate" ng-model="entreprise.adresseusine">
             <label for="adresseusine">Adresse usine</label>
         </div>
         <div class="input-field col s4">
-            <input id="gouvernorat" type="text" class="validate">
+            <input id="gouvernorat" type="text" class="validate" ng-model="entreprise.gouvernorat">
             <label for="gouvernorat">Gouvernorat</label>
         </div>
         <div class="input-field col s4">
-            <input id="delegation" type="text" class="validate">
+            <input id="delegation" type="text" class="validate" ng-model="entreprise.delegation">
             <label for="delegation">Délégation</label>
         </div>
     </div>
 
     <div class="row">
         <div class="input-field col s6">
-            <input id="tel" type="tel" class="validate">
+            <input id="tel" type="tel" class="validate"  ng-model="entreprise.telephone">
             <label for="tel">Téléphone siège/usine</label>
         </div>
         <div class="input-field col s6">
-            <input id="fax" type="tel" class="validate">
+            <input id="fax" type="tel" class="validate" ng-model="entreprise.fax">
             <label for="fax">Fax siège/usine</label>
         </div>
     </div>
 
     <div class="row">
         <div class="input-field col s6">
-            <input id="mail" type="email" class="validate">
+            <input id="mail" type="email" class="validate" ng-model="entreprise.email">
             <label for="mail">E-mail</label>
         </div>
         <div class="input-field col s6">
-            <input id="url" type="url" class="validate">
+            <input id="url" type="url" class="validate" ng-model="entreprise.url">
             <label for="url">URL</label>
         </div>
     </div>
