--- a/public/app/views/forms/entrepriseForm4.html
+++ b/public/app/views/forms/entrepriseForm4.html
@@ -2,11 +2,11 @@
     <div class="row">
         <div class="input-field col s6">
             <input id="latitude" type="text" class="validate" ng-model="entreprise.latitude">
-            <label for="latitude">Latitude</label>
+            <label for="latitude" ng-class="{'active' : entreprise.latitude}">Latitude</label>
         </div>
         <div class="input-field col s6">
             <input id="longitude" type="text" class="validate" ng-model="entreprise.longitude">
-            <label for="longitude">Longitude</label>
+            <label for="longitude" ng-class="{'active' : entreprise.longitude}">Longitude</label>
         </div>
     </div>
 
