--- a/public/app/views/forms/entrepriseForm1.html
+++ b/public/app/views/forms/entrepriseForm1.html
@@ -2,26 +2,26 @@
     <div class="row">
         <div class="input-field col s4">
             <input id="denomination" type="text" class="validate" ng-model="entreprise.denomination">
-            <label for="denomination" class="ng-class:isSelected">Dénomination</label>
+            <label for="denomination"  ng-class="{'active' : entreprise.denomination}">Dénomination</label>
         </div>
         <div class="input-field col s4">
             <input id="raisonsociale" type="text" class="validate" ng-model="entreprise.raisonsociale">
-            <label for="raisonsociale">Raison Sociale</label>
+            <label for="raisonsociale" ng-class="{'active' : entreprise.raisonsociale}">Raison Sociale</label>
         </div>
         <div class="input-field col s4">
             <input id="responsable" type="text" class="validate" ng-model="entreprise.responsable">
-            <label for="responsable">Responsable</label>
+            <label for="responsable" ng-class="{'active' : entreprise.responsable}">Responsable</label>
         </div>
     </div>
 
     <div class="row">
         <div class="input-field col s6">
             <textarea id="activite" class="materialize-textarea" ng-model="entreprise.activite"></textarea>
-            <label for="activite">Activités</label>
+            <label for="activite" ng-class="{'active' : entreprise.activite}">Activités</label>
         </div>
         <div class="input-field col s6">
             <textarea id="produit" class="materialize-textarea" ng-model="entreprise.produit"></textarea>
-            <label for="produit">Produits</label>
+            <label for="produit" ng-class="{'active' : entreprise.produit}">Produits</label>
         </div>
     </div>
 </div>
