--- a/public/app/views/signUpForm.html
+++ b/public/app/views/signUpForm.html
@@ -1,35 +1,35 @@
 <div class="row user-from" id="signup-form">
-    <form class="col s12">
+    <form class="col s12" ng-submit="signUpUser()">
         <div class="row">
             <div class="input-field col s6">
-                <input id="first_name" type="text" class="validate">
-                <label for="first_name">First Name</label>
+                <input id="first_name" type="text" class="validate" ng-model="user.username">
+                <label for="first_name" ng-class="{'active' : user.username}">First Name</label>
             </div>
             <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Last Name</label>
+                <input id="last_name" type="text" class="validate" ng-model="user.lastName">
+                <label for="last_name" ng-class="{'active' : user.lastName}">Last Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
-                <input id="password" type="password" class="validate">
-                <label for="password">Password</label>
+                <input id="password" type="password" class="validate" ng-model="user.password">
+                <label for="password" ng-class="{'active' : user.password}">Password</label>
             </div>
             <div class="input-field col s6">
-                <input id="password-confirm" type="password" class="validate">
-                <label for="password-confirm">Confirm password</label>
+                <input id="password-confirm" type="password" class="validate" ng-model="user.confirmPassword">
+                <label for="password-confirm"  ng-class="{'active' : user.confirmPassword}">Confirm password</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input id="email" type="email" class="validate">
-                <label for="email">Email</label>
+                <input id="email" type="email" class="validate" ng-model="user.email">
+                <label for="email" ng-class="{'active' : user.email}">Email</label>
             </div>
         </div>
 
         <div class="row">
 
-            <button class="btn waves-effect waves-ligh offset-s10" type="submit" name="action">Signup
+            <button type="submit" class="btn waves-effect waves-ligh offset-s10" name="action">Signup
                 <i class="mdi-content-send right"></i>
             </button>
         </div>
