--- a/public/app/views/forms/entrepriseForm3.html
+++ b/public/app/views/forms/entrepriseForm3.html
@@ -6,7 +6,7 @@
         </div>
         <div class="input-field col s4">
             <input id="pays" type="text" class="validate" ng-model="entreprise.pays">
-            <label for="pays" ng-class="{'active' : entreprise.pays}">Pays du Participant Etranger </label>
+            <label for="pays" ng-class="{'active' : entreprise.pays}">Pays </label>
         </div>
         <div class="input-field col s4">
             <input id="annee" type="date" class="validate datepicker" ng-model="entreprise.production">
