--- a/public/app/views/header.html
+++ b/public/app/views/header.html
@@ -5,6 +5,7 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="#/">Home</a></li>
                 <li><a href="#/entreprise/ajouter">Ajouter Entreprise</a></li>
+                <li><a href="#/entreprise/list">Liste des entreprise</a></li>
                 <li><a href="#/login">Login</a></li>
                 <li><a href="#/signup">Signup</a></li>
             </ul>
