--- a/public/app/css/mystyle.css
+++ b/public/app/css/mystyle.css
@@ -1,31 +1,66 @@
 /*body {*/
-    /*display: flex;*/
-    /*min-height: 100vh;*/
-    /*flex-direction: column;*/
-    /*margin-bottom:50px;*/
+/*display: flex;*/
+/*min-height: 100vh;*/
+/*flex-direction: column;*/
+/*margin-bottom:50px;*/
 
 /*}*/
 
 /*main {*/
-    /*flex: 1 0 auto;*/
+/*flex: 1 0 auto;*/
 /*}*/
-
-
-
-footer{
-    position:fixed;
-    bottom:0px;
-    left:0px;
-    right:0px;
-    margin-bottom:0px;
+html,
+body {
+    margin:0;
+    padding:0;
+    height:100%;
 }
 
+#login-form form{
+    margin-left: 0% !important;
+}
+
+#wrapper {
+    min-height:100%;
+    position:relative;
+}
+
+#viewContainer {
+    padding-bottom:10%; /* Height of the footer element */
+}
+
+footer {
+    width:100%;
+    height:100px;
+    bottom:0;
+    left:0;
+}
 
 .user-from{
     width: 100%;
-    margin: 15% auto 0 auto;
+    margin: 8% auto 0 auto;
 }
 
 footer.page-footer, nav{
     background-color: #329284;
+}
+
+.addbtn{
+    height: 120px;
+    line-height: 120px;
+    margin-top: 190px;
+    margin-left: 130px;
+}
+
+.centredtable td{
+    text-align: center;
+}
+
+.floatRightbtn{
+    float: right;
+    bottom: 8px;
+}
+
+.stepnumber{
+    float: left;
 }
