--- a/public/app/views/forms/entrepriseForm4.html
+++ b/public/app/views/forms/entrepriseForm4.html
@@ -10,7 +10,7 @@
         </div>
     </div>
 
-    <div ng-init="initMap();" class="row" id="maps" style="width: 600px; height: 400px;">
+    <div ng-init="initMap();" class="row" id="maps">
 
     </div>
 
