--- a/public/app/views/header.html
+++ b/public/app/views/header.html
@@ -3,11 +3,11 @@
         <div class="nav-wrapper">
             <a href="#" class="brand-logo"></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#/">Home</a></li>
-                <li><a href="#/entreprise/ajouter">Ajouter Entreprise</a></li>
-                <li><a href="#/entreprise/list">Liste des entreprise</a></li>
-                <li><a href="#/login">Login</a></li>
-                <li><a href="#/signup">Signup</a></li>
+                <li ng-class="{ active: isActive('#/')}"><a href="#/">Home</a></li>
+                <li ng-class="{ active: isActive('/cats')}"><a href="#/entreprise/ajouter">Ajouter Entreprise</a></li>
+                <li ng-class="{ active: isActive('/cats')}"><a href="#/entreprise/list">Liste des entreprise</a></li>
+                <li ng-class="{ active: isActive('/cats')}"><a href="#/login">Login</a></li>
+                <li ng-class="{ active: isActive('/cats')}"><a href="#/signup">Signup</a></li>
             </ul>
         </div>
     </nav>
