--- a/public/app/views/signUpForm.html
+++ b/public/app/views/signUpForm.html
@@ -28,6 +28,13 @@
         </div>
 
         <div class="row">
+            <div class="input-field col s12">
+                <input id="cdins" type="email" class="validate">
+                <label for="cdins" ng-class="{'active' : user.email}">Code d'inscription</label>
+            </div>
+        </div>
+
+        <div class="row">
 
             <button type="submit" class="btn waves-effect waves-ligh offset-s10" name="action">Signup
                 <i class="mdi-content-send right"></i>
