--- a/public/app/views/modals/entrepriseForm.html
+++ b/public/app/views/modals/entrepriseForm.html
@@ -7,7 +7,7 @@
                 <a href="" class="brand-logo center">Ajouter une entreprise</a>
             </div>
         </nav>
-        <form class="form-vertical" name="myForm"  novalidate>
+        <form class="form-vertical modals" name="myForm"  novalidate>
             <fieldset ng-show="step == 1">
                 <legend>L'entreprise</legend>
                 <div class="form-group">
