--- a/public/app/views/loginForm.html
+++ b/public/app/views/loginForm.html
@@ -1,16 +1,16 @@
 <div class="row user-from" id="login-form">
-    <form class="col s12 offset-s3">
+    <form class="col s12 offset-s3" ng-submit="login()">
 
         <div class="row">
             <div class="input-field col s6">
-                <input id="email" type="email" class="validate">
+                <input id="email" type="text" class="validate" ng-model="user.username">
                 <label for="email">Email</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field col s6">
-                <input id="password" type="password" class="validate">
+                <input id="password" type="password" class="validate" ng-model="user.password">
                 <label for="password">Password</label>
             </div>
         </div>
